calculadora/src/main/java/com/example/alumnos/error/EmptyRequestException.java
package com.example.alumnos.error;

public class EmptyRequestException extends RuntimeException{

	public EmptyRequestException (String message) {
		super(message);
	}

}
